@@ -16,8 +16,10 @@ Each of these values can be found in any section. The service being run will try
   * delete_prompt: [True, False], Prompt to confirm deletion of items.
   * force_gdata_v1: [True, False] Force GoogleCL to use the code written for version 1 of the gdata API. True will disable some functionality (e.g. being able to see/manipulate arbitrary uploads to Docs), but may be required if you are unable to copy and paste the verification code in the browser. (For advanced users: This forces the import_service() function in the google script to load the "service" module even when the "client" module is available.)
   * fields: [<field>,<field>,...] Comma-separated (no spaces) list of attributes to print out when using the 'list' task and no fields are specified on the command line. For a list of valid fields, see the README / manual.
+  * max_retries: [<integer>] Number of attempts to make for an operation that fails with a 302 "redirect" error. Set to 0 for infinite attempts.
   * max_results: [<integer>], Maximum number of results / entries to return. Sets the max-results query parameter of the uri. You can use this with cap_results to limit the amount of data being sent over the network.
   * regex: [True, False], Use regular expressions in matching titles.
+  * retry_delay: [<decimal>] Number of seconds to wait after a 302 "redirect" error before trying again. Not terribly meaningful if max_attempts is 1.
   * skip_auth: [True, False], Don't check that the oauth access token read from file is actually valid. This is also a command line option, but will be set to True automatically once a valid access token is acquired and written to file.
   * tags_prompt: [True, False], Prompt for tags for each item being uploaded. (Not fully implemented).
 
